--- a/distribution/src/main/resources/docker-compose/nginx.conf
+++ b/distribution/src/main/resources/docker-compose/nginx.conf
@@ -69,7 +69,7 @@ http {
             absolute_redirect off;
         }
 
-        location /auth/ {
+        location /auth {
             proxy_pass http://auth-provider:8080;
 
             # If using external proxy / load balancer (for initial redirect if no trailing slash)
