--- a/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
@@ -30,13 +30,13 @@ services:
         -Ddeployment.method=DOCKER_COMPOSE
         -Dtransform.service.enabled=true
         -Dtransform.service.url=http://transform-router:8095
-        -Dsfs.url=http://shared-file-store:8099/
-        -DlocalTransform.core-aio.url=http://transform-core-aio:8090/
-        -Dalfresco-pdf-renderer.url=http://transform-core-aio:8090/
-        -Djodconverter.url=http://transform-core-aio:8090/
-        -Dimg.url=http://transform-core-aio:8090/
-        -Dtika.url=http://transform-core-aio:8090/
-        -Dtransform.misc.url=http://transform-core-aio:8090/
+        -Dsfs.url=http://shared-file-store:8099
+        -DlocalTransform.core-aio.url=http://transform-core-aio:8090
+        -Dalfresco-pdf-renderer.url=http://transform-core-aio:8090
+        -Djodconverter.url=http://transform-core-aio:8090
+        -Dimg.url=http://transform-core-aio:8090
+        -Dtika.url=http://transform-core-aio:8090
+        -Dtransform.misc.url=http://transform-core-aio:8090
         -Dcsrf.filter.enabled=false
         -Dauthentication.chain=identity-service1:identity-service,alfrescoNtlm1:alfrescoNtlm
         -Didentity-service.authentication.validation.failure.silent=false
