--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -39,13 +39,13 @@ services:
         -Ddeployment.method=DOCKER_COMPOSE
         -Dtransform.service.enabled=true
         -Dtransform.service.url=http://transform-router:8095
-        -Dsfs.url=http://shared-file-store:8099/
-        -DlocalTransform.core-aio.url=http://transform-core-aio:8090/
-        -Dalfresco-pdf-renderer.url=http://transform-core-aio:8090/
-        -Djodconverter.url=http://transform-core-aio:8090/
-        -Dimg.url=http://transform-core-aio:8090/
-        -Dtika.url=http://transform-core-aio:8090/
-        -Dtransform.misc.url=http://transform-core-aio:8090/
+        -Dsfs.url=http://shared-file-store:8099
+        -DlocalTransform.core-aio.url=http://transform-core-aio:8090
+        -Dalfresco-pdf-renderer.url=http://transform-core-aio:8090
+        -Djodconverter.url=http://transform-core-aio:8090
+        -Dimg.url=http://transform-core-aio:8090
+        -Dtika.url=http://transform-core-aio:8090
+        -Dtransform.misc.url=http://transform-core-aio:8090
         -Dcsrf.filter.enabled=false
         -Dalfresco.restApi.basicAuthScheme=true
         -Dhxi.discovery.base-url=http://hxinsight-mock:8080
@@ -276,7 +276,7 @@ services:
       ELASTICSEARCH_INDEXNAME: alfresco
       SPRING_ELASTICSEARCH_REST_URIS: http://elasticsearch:9200
       SPRING_ACTIVEMQ_BROKERURL: nio://activemq:61616
-      ALFRESCO_SHAREDFILESTORE_BASEURL: http://shared-file-store:8099/alfresco/api/-default-/private/sfs/versions/1/file/
+      ALFRESCO_SHAREDFILESTORE_BASEURL: http://shared-file-store:8099/alfresco/api/-default-/private/sfs/versions/1/file
       ALFRESCO_ACCEPTEDCONTENTMEDIATYPESCACHE_BASEURL: http://transform-core-aio:8090/transform/config
     ports:
       - "5005:5005"
