--- a/distribution/src/main/resources/docker-compose/nginx.conf
+++ b/distribution/src/main/resources/docker-compose/nginx.conf
@@ -55,14 +55,14 @@ http {
             proxy_pass http://alfresco:8080;
         }
 
-        location /workspace/ {
+        location /workspace {
             proxy_pass http://digital-workspace:8080/;
 
             # If using external proxy / load balancer (for initial redirect if no trailing slash)
             absolute_redirect off;
         }
 
-        location /alfresco/ {
+        location /alfresco {
             proxy_pass http://alfresco:8080;
 
             # If using external proxy / load balancer (for initial redirect if no trailing slash)
@@ -76,7 +76,7 @@ http {
             absolute_redirect off;
         }
 
-         location /share/ {
+         location /share {
              proxy_pass http://share:8080;
 
              # If using external proxy / load balancer (for initial redirect if no trailing slash)
