ACS-8732: Adjust docker-compose setup to align with convention and base keycloak setup on default d-c config

--- a/distribution/src/main/resources/docker-compose/nginx.conf
+++ b/distribution/src/main/resources/docker-compose/nginx.conf
@@ -1,7 +1,7 @@
 # DISCLAIMER:
 
 # This internal config is for Dev/Test only (ie. it must *not* be used for live / production environments with private /confidential data)
-# It is unsupport and for internal reference only It is insecure & not tuned for performance. Test data will be lost (ie. no upgrade testing)
+# It is unsupported and for internal reference only. It is insecure & not tuned for performance. Test data will be lost (ie. no upgrade testing)
 
 # note: originally adapted from: https://github.com/Alfresco/acs-ingress/blob/master/nginx.conf
 
@@ -21,11 +21,7 @@ http {
         set  $allowOriginSite *;
 
         proxy_pass_request_headers on;
-
         proxy_pass_header Set-Cookie;
-
-        # External settings, do not remove
-        #ENV_ACCESS_LOG
 
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
         proxy_redirect off;
@@ -37,18 +33,9 @@ http {
         proxy_set_header Host            $host:$server_port;
         proxy_set_header X-Real-IP       $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass_header Set-Cookie;
 
-        # Protect access to SOLR APIs
-        location ~ ^(/.*/service/api/solr/.*)$ {return 403;}
-        location ~ ^(/.*/s/api/solr/.*)$ {return 403;}
-        location ~ ^(/.*/wcservice/api/solr/.*)$ {return 403;}
-        location ~ ^(/.*/wcs/api/solr/.*)$ {return 403;}
-
-        location ~ ^(/.*/proxy/alfresco/api/solr/.*)$ {return 403 ;}
         location ~ ^(/.*/-default-/proxy/alfresco/api/.*)$ {return 403;}
 
-        # Protect access to Prometheus endpoint
         location ~ ^(/.*/s/prometheus)$ {return 403;}
 
         location / {
