ACS-8732: Adjust docker-compose setup to align with convention

--- a/distribution/src/main/resources/docker-compose/docker-compose.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose.yml
@@ -218,8 +218,8 @@ services:
         limits:
           memory: 1700m
     environment:
-      XPACK_SECURITY_ENABLED: false
-      DISCOVERY_TYPE: single-node
+      - xpack.security.enabled=false
+      - discovery.type=single-node
     ulimits:
       memlock:
         soft: -1
