--- a/distribution/src/main/resources/docker-compose/nginx.conf
+++ b/distribution/src/main/resources/docker-compose/nginx.conf
@@ -42,13 +42,6 @@ http {
             proxy_pass http://alfresco:8080;
         }
 
-        location /workspace {
-            proxy_pass http://digital-workspace:8080/;
-
-            # If using external proxy / load balancer (for initial redirect if no trailing slash)
-            absolute_redirect off;
-        }
-
         location /alfresco {
             proxy_pass http://alfresco:8080;
 
@@ -63,11 +56,18 @@ http {
             absolute_redirect off;
         }
 
-         location /share {
-             proxy_pass http://share:8080;
+        location /share {
+            proxy_pass http://share:8080;
 
-             # If using external proxy / load balancer (for initial redirect if no trailing slash)
-             absolute_redirect off;
-         }
-     }
+            # If using external proxy / load balancer (for initial redirect if no trailing slash)
+            absolute_redirect off;
+        }
+
+        location /workspace/ {
+            proxy_pass http://digital-workspace:8080/;
+
+            # If using external proxy / load balancer (for initial redirect if no trailing slash)
+            absolute_redirect off;
+        }
+    }
 }
