ACS-8732: Adjust docker-compose setup to align with convention

--- a/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
@@ -191,7 +191,7 @@ services:
       service: aws-mock
 
   auth-provider:
-    image: quay.io/keycloak/keycloak:${KEYCLOAK_TAG}
+    image: keycloak/keycloak:${KEYCLOAK_TAG}
     deploy:
       resources:
         limits:
