--- a/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
+++ b/distribution/src/main/resources/docker-compose/docker-compose-w-keycloak.yml
@@ -47,6 +47,7 @@ services:
         -Didentity-service.resource=alfresco
         -Dhxi.discovery.base-url=http://hxinsight-mock:8080
         -Dhxi.auth.providers.hyland-experience.token-uri=http://hxinsight-mock:8080/token
+        -Dserviceaccount.role.service-account-hxi-connector=ROLE_ADMIN_SERVICE_ACCOUNT
         -Xms1500m -Xmx1500m
         "
 
@@ -155,12 +156,11 @@ services:
       service: live-ingester
     environment:
       AUTH_PROVIDERS_ALFRESCO_TYPE: oauth2
-      AUTH_PROVIDERS_ALFRESCO_CLIENTID: alfresco
-      AUTH_PROVIDERS_ALFRESCO_CLIENTSECRET:
-      AUTH_PROVIDERS_ALFRESCO_GRANTTYPE: password
+      AUTH_PROVIDERS_ALFRESCO_GRANTTYPE: client_credentials
       AUTH_PROVIDERS_ALFRESCO_TOKENURI: http://auth-provider:8080/auth/realms/alfresco/protocol/openid-connect/token
-      AUTH_PROVIDERS_ALFRESCO_USERNAME: admin
-      AUTH_PROVIDERS_ALFRESCO_PASSWORD: admin
+      AUTH_PROVIDERS_ALFRESCO_CLIENTID: hxi-connector
+      AUTH_PROVIDERS_ALFRESCO_CLIENTSECRET: secret
+      AUTH_PROVIDERS_ALFRESCO_SCOPE: openid email profile
 
   bulk-ingester:
     extends:
@@ -173,12 +173,11 @@ services:
       service: prediction-applier
     environment:
       AUTH_PROVIDERS_ALFRESCO_TYPE: oauth2
-      AUTH_PROVIDERS_ALFRESCO_CLIENTID: alfresco
-      AUTH_PROVIDERS_ALFRESCO_CLIENTSECRET:
-      AUTH_PROVIDERS_ALFRESCO_GRANTTYPE: password
+      AUTH_PROVIDERS_ALFRESCO_GRANTTYPE: client_credentials
       AUTH_PROVIDERS_ALFRESCO_TOKENURI: http://auth-provider:8080/auth/realms/alfresco/protocol/openid-connect/token
-      AUTH_PROVIDERS_ALFRESCO_USERNAME: admin
-      AUTH_PROVIDERS_ALFRESCO_PASSWORD: admin
+      AUTH_PROVIDERS_ALFRESCO_CLIENTID: hxi-connector
+      AUTH_PROVIDERS_ALFRESCO_CLIENTSECRET: secret
+      AUTH_PROVIDERS_ALFRESCO_SCOPE: openid email profile
 
   hxinsight-mock:
     extends:
