--- a/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
+++ b/hxinsight-extension/src/main/resources/alfresco/module/alfresco-hxinsight-connector-hxinsight-extension/alfresco-global.properties
@@ -4,6 +4,8 @@
 ## alfresco/tomcat/shared/classes/alfresco-global.properties.
 ##
 
+serviceaccount.role.service-account-hxi-connector=
+
 hxi.auth.providers.hyland-experience.type=oauth2
 hxi.auth.providers.hyland-experience.grant-type=client_credentials
 hxi.auth.providers.hyland-experience.client-name=acs-insight-connector
