--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -15,6 +15,8 @@ application:
   source-id: alfresco-dummy-source-id-0a63de491876
   version: "@project.version@"
 
+logging.pattern.console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %replace(%msg){'\"?Authorization\"?=\"?[a-zA-Z0-9-_.\" \"]*\"?+', 'Authorization=*****'}%n"
+
 alfresco:
   repository:
     events-endpoint: activemq:topic:alfresco.repo.event2
