--- a/live-ingester/src/main/resources/application.yml
+++ b/live-ingester/src/main/resources/application.yml
@@ -15,7 +15,7 @@ application:
   source-id: alfresco-dummy-source-id-0a63de491876
   version: "@project.version@"
 
-logging.pattern.console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %replace(%msg){'\"?Authorization\"?=\"?[a-zA-Z0-9-_.\" \"]*\"?+', 'Authorization=*****'}%n"
+logging.pattern.console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(%5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %replace(%m){'\"?Authorization\"?=\"?[a-zA-Z0-9-_.\" \"]*\"?+', 'Authorization=*****'}%n%wEx"
 
 alfresco:
   repository:
