[ACS-8676] bump alfresco-build-tools

--- a/srcclr.yml
+++ b/srcclr.yml
@@ -1,3 +1,5 @@
 # To avoid the provided dependencies we set the scope to runtime. See: https://docs.veracode.com/r/c_sc_scan_directives
 # runtime: to restrict the scan to compile and runtime dependencies.
 scope: runtime
+# using a custom maven command to skip test modules
+custom_maven_command: clean install -Dmaven.test.skip -P !test -pl "!common-test,!e2e-test"
