--- a/live-ingester/src/integration-test/resources/application-test.yml
+++ b/live-ingester/src/integration-test/resources/application-test.yml
@@ -13,7 +13,7 @@ alfresco:
         '[image/*]': "image/jpeg"
         '[application/*]': "application/pdf"
   repository:
-    version-override: "23.3.0"
+    version-override: "23.4.0-M1"
 hyland-experience:
   authentication:
     retry:
