[ACS-9062] Switch to ACS Event Model 1.0.2

--- a/live-ingester/pom.xml
+++ b/live-ingester/pom.xml
@@ -78,7 +78,7 @@
         </dependency>
         <dependency>
             <groupId>org.alfresco</groupId>
-            <artifactId>acs-enterprise-event-model</artifactId>
+            <artifactId>acs-event-model</artifactId>
         </dependency>
 
         <dependency>
