--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
         <alfresco-platform.version>23.4.0-M1</alfresco-platform.version>
         <alfresco-sdk.version>4.9.0</alfresco-sdk.version>
         <alfresco-db-connector.version>4.1.0</alfresco-db-connector.version>
-        <alfresco-event-model.version>0.0.68</alfresco-event-model.version>
+        <alfresco-event-model.version>1.0.2</alfresco-event-model.version>
         <spring-boot.version>3.3.5</spring-boot.version>
         <spring-camel.version>4.8.1</spring-camel.version>
         <commons-lang.version>3.17.0</commons-lang.version>
@@ -223,7 +223,7 @@
             </dependency>
             <dependency>
                 <groupId>org.alfresco</groupId>
-                <artifactId>acs-enterprise-event-model</artifactId>
+                <artifactId>acs-event-model</artifactId>
                 <version>${alfresco-event-model.version}</version>
             </dependency>
             <dependency>
