--- a/live-ingester/pom.xml
+++ b/live-ingester/pom.xml
@@ -130,6 +130,11 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.atlassian.oai</groupId>
+            <artifactId>swagger-request-validator-core</artifactId>
+            <version>2.44.1</version>
+        </dependency>
     </dependencies>
 
     <build>
