adding update and delete validation tests

--- a/live-ingester/src/integration-test/resources/expected-hxinsight-requests/create-document-request.yml
+++ b/live-ingester/src/integration-test/resources/expected-hxinsight-requests/create-document-request.yml
@@ -1,6 +1,6 @@
 url: /v1/ingestion-events
 headers:
-  authorization: application/json
+  authorization: string
   content-type: application/json
   hxp-environment: string
   user-agent: string
