--- a/live-ingester/pom.xml
+++ b/live-ingester/pom.xml
@@ -133,7 +133,7 @@
         <dependency>
             <groupId>com.atlassian.oai</groupId>
             <artifactId>swagger-request-validator-core</artifactId>
-            <version>2.44.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
