update test for presigned-urls to verify it against request from yml file

--- a/live-ingester/src/integration-test/resources/rest/hxinsight/requests/get-presigned-urls.yml
+++ b/live-ingester/src/integration-test/resources/rest/hxinsight/requests/get-presigned-urls.yml
@@ -1,7 +1,7 @@
 url: /v1/presigned-urls
 headers:
-  authorization: string
+  authorization: Bearer .*
   content-type: application/json
-  hxp-environment: string
-  user-agent: string
+  hxp-environment: hxai-.*
+  user-agent: ACS HXI Connector/.* ACS/.*
   count: string
