--- a/common-test/src/main/resources/docker-tags.properties
+++ b/common-test/src/main/resources/docker-tags.properties
@@ -6,6 +6,6 @@ wiremock.tag=@dist.wiremock.version@
 transform.router.tag=@dist.transform.router.version@
 transform.core.aio.tag=@dist.transform.core.aio.version@
 sfs.tag=@dist.transform.sfs.version@
-hxi.connector.tag=@project.parent.version@
+hxi.connector.tag=@project.version@
 repository.extension=@dist.alfresco.repo.extension@
 repository.java.version=@alfresco-platform.java.version@
