--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
         <aws-sdk-s3.version>2.29.46</aws-sdk-s3.version>
         <wiremock.version>3.10.0</wiremock.version>
         <system-stubs.version>2.1.7</system-stubs.version>
+        <tomcat.version>11.0.2</tomcat.version>
 
         <testcontainers.version>1.20.4</testcontainers.version>
         <wiremock-testcontainers-module.version>1.0-alpha-14</wiremock-testcontainers-module.version>
@@ -300,7 +301,23 @@
                 <artifactId>swagger-request-validator-core</artifactId>
                 <version>${swagger-request-validator.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-core</artifactId>
+                <version>${tomcat.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-el</artifactId>
+                <version>${tomcat.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-websocket</artifactId>
+                <version>${tomcat.version}</version>
+            </dependency>
         </dependencies>
+
     </dependencyManagement>
 
     <build>
