--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ on:
       - release/**
   schedule:
     - cron: "0 0 * * *"  # Runs every night at midnight
+  workflow_dispatch:  # Allows manual triggering of the workflow
 
 env:
   # Both variables are required to be set before the release process starts .
@@ -234,7 +235,7 @@ jobs:
   nightly_tests:
     name: "Run nightly Tests"
     runs-on: ubuntu-latest
-    if: github.event_name == 'schedule'
+    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@v4
