changing github event to push for testing nightly_tests job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,6 @@ on:
       - release/**
   schedule:
     - cron: "0 0 * * *"  # Runs every night at midnight
-  workflow_dispatch:  # Allows manual triggering of the workflow
 
 env:
   # Both variables are required to be set before the release process starts .
@@ -235,7 +234,7 @@ jobs:
   nightly_tests:
     name: "Run nightly tests"
     runs-on: ubuntu-latest
-    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'push'
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@v4
@@ -247,7 +246,7 @@ jobs:
       - name: "Build application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests
       - name: "Run OpenApi Specification tests"
-        run: mvn test -pl 'live-ingester' -Dtest=OpenApiRequestValidationTest -DskipTests
+        run: mvn test -Dtest=OpenApiRequestValidationTest
       - name: "Notify on failure"
         if: failure()
         run: |
