--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
       - master
       - release/**
   schedule:
-    - cron: "0 0 * * *"  # Runs every night at midnight
+    - cron: "*/2 * * * *"  # Runs every night at midnight
 
 env:
   # Both variables are required to be set before the release process starts .
@@ -234,7 +234,7 @@ jobs:
   nightly_tests:
     name: "Run nightly tests"
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    if: github.event_name == 'schedule'
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@v4
