updating test and ci for nightly job run

--- a/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-document.yml
+++ b/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-document.yml
@@ -26,7 +26,7 @@ body: [
       "cm:content": {
         "file": {
           "content-metadata": {
-
+            "size": 531152,
             "name": "purchase-order-scan.doc",
             "content-type": "application/msword"
           }
