--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
       - master
       - release/**
   schedule:
-    - cron: "0 0 * * *"  # Runs every night at midnight
+    - cron: "0 0 * * *"  # Cron runs every night at midnight
       branches:
         - master
 
