--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
       - master
       - release/**
   schedule:
-    - cron: "0 0 * * *"  # Cron runs every night at midnight
+    - cron: "0 0 * * *"  # Runs every night at midnight
       branches:
         - master
 
@@ -35,20 +35,19 @@ env:
 jobs:
   pre_commit:
     runs-on: ubuntu-latest
-    if: github.event_name != 'schedule'
     outputs:
       java_version: ${{ env.JAVA_VERSION }}
       java_version_supported_by_repo: ${{ env.JAVA_VERSION_SUPPORTED_BY_REPO }}
     steps:
-      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - id: changed-files
-        uses: Alfresco/alfresco-build-tools/.github/actions/github-list-changes@v8.4.0
+        uses: Alfresco/alfresco-build-tools/.github/actions/github-list-changes@v8.8.0
         with:
           write-list-to-env: true
-      - uses: Alfresco/alfresco-build-tools/.github/actions/pre-commit@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/pre-commit@v8.8.0
 
   veracode_sca:
     name: "Veracode - Source Clear Scan (SCA)"
@@ -60,9 +59,9 @@ jobs:
       !contains(github.event.head_commit.message, '[skip build]')
     steps:
       - uses: actions/checkout@v4
-      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.4.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.4.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/veracode@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.8.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/veracode@v8.8.0
         continue-on-error: true
         with:
           srcclr-api-token: ${{ secrets.SRCCLR_API_TOKEN }}
@@ -78,8 +77,8 @@ jobs:
       !contains(github.event.head_commit.message, '[skip build]')
     steps:
       - uses: actions/checkout@v4
-      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.4.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/github-download-file@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/github-download-file@v8.8.0
         with:
           token: ${{ secrets.BOT_GITHUB_TOKEN }}
           repository: "Alfresco/veracode-baseline-archive"
@@ -88,7 +87,7 @@ jobs:
       - name: "Build application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests
       - name: "Run SAST Scan"
-        uses: veracode/Veracode-pipeline-scan-action@v1.0.16
+        uses: veracode/Veracode-pipeline-scan-action@v1.0.17
         with:
           vid: ${{ secrets.VERACODE_API_ID }}
           vkey: ${{ secrets.VERACODE_API_KEY }}
@@ -113,8 +112,8 @@ jobs:
       !contains(github.event.head_commit.message, '[skip tests]')
     steps:
       - uses: actions/checkout@v4
-      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.4.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.8.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
       - uses: Alfresco/ya-pmd-scan@v4.2.0
 
   test_application:
@@ -133,14 +132,14 @@ jobs:
                       "live-ingester", "prediction-applier", "hxinsight-extension" ]
     steps:
       - uses: actions/checkout@v4
-      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.8.0
       - name: "Login to Quay.io"
         uses: docker/login-action@v3
         with:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
-      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
       - name: "Test application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean verify -pl '${{ matrix.subproject }}' -am
 
@@ -159,14 +158,14 @@ jobs:
         repoVersion: [ 7.3.2, 7.4.2, 23.3.0 ]
     steps:
       - uses: actions/checkout@v4
-      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.8.0
       - name: "Login to Quay.io"
         uses: docker/login-action@v3
         with:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
-      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
       - name: "Build application with distribution profile"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests -Dalfresco-platform.version=${{ matrix.repoVersion }}
 
@@ -186,14 +185,14 @@ jobs:
         repoVersion: [ 7.3.2, 7.4.2, 23.3.0 ]
     steps:
       - uses: actions/checkout@v4
-      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.8.0
       - name: "Login to Quay.io"
         uses: docker/login-action@v3
         with:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
-      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
       - name: "Build application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests -Dalfresco-platform.version=${{ matrix.repoVersion }}
       - name: "Build docker images"
@@ -219,14 +218,14 @@ jobs:
         repoVersion: [ 7.3.2, 7.4.2 ]
     steps:
       - uses: actions/checkout@v4
-      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.8.0
       - name: "Login to Quay.io"
         uses: docker/login-action@v3
         with:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
-      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
       - name: "Build application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests -Dalfresco-platform.version=${{ matrix.repoVersion }} -Dalfresco-platform.java.version=${{ env.JAVA_VERSION_SUPPORTED_BY_REPO }}
       - name: "Build docker images"
@@ -242,14 +241,14 @@ jobs:
       - name: "Checkout repository"
         uses: actions/checkout@v4
       - name: "Set up JDK"
-        uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.4.0
+        uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
       - name: "Build application"
         run: mvn clean install -DskipTests -pl live-ingester
       - name: "Run OpenApi Specification tests"
         run: mvn test -Dtest=OpenApiRequestValidationTest -pl live-ingester
       - name: "Notify on failure"
         if: failure()
-        uses: Alfresco/alfresco-build-tools/.github/actions/send-teams-notification@v8.4.0
+        uses: Alfresco/alfresco-build-tools/.github/actions/send-teams-notification@v8.8.0
         with:
           webhook-url: ${{ secrets.MS_TEAMS_WEBHOOK_URL }}
           message: "Nightly tests failed"
@@ -276,8 +275,8 @@ jobs:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
-      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.4.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.8.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
       - name: "Build application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests -Dalfresco-platform.java.version=${{ env.JAVA_VERSION_SUPPORTED_BY_REPO }}
       - name: "Push docker images"
@@ -301,9 +300,9 @@ jobs:
       !contains(github.event.head_commit.message, '[skip build]')
     steps:
       - uses: actions/checkout@v4
-      - uses: Alfresco/alfresco-build-tools/.github/actions/get-build-info@v8.4.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.4.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/get-build-info@v8.8.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.8.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
       - name: "Publish SNAPSHOT artifacts"
         timeout-minutes: ${{ fromJSON(env.GITHUB_ACTIONS_DEPLOY_TIMEOUT) }}
         run: mvn ${{ env.MAVEN_CLI_OPTS }} deploy -DskipTests -Dalfresco-platform.java.version=${{ env.JAVA_VERSION_SUPPORTED_BY_REPO }}
@@ -326,9 +325,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
-      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.4.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.4.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/configure-git-author@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.8.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/configure-git-author@v8.8.0
         with:
           username: ${{ secrets.BOT_GITHUB_USERNAME }}
           email: ${{ secrets.BOT_GITHUB_EMAIL }}
@@ -378,8 +377,8 @@ jobs:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
-      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.4.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.4.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.8.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
       - name: "Build application"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests -Dproject.revision.key=${{ github.sha }} -Dalfresco-platform.java.version=${{ env.JAVA_VERSION_SUPPORTED_BY_REPO }}
       - name: "Deploy release version to quay.io"
