--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,44 @@ jobs:
         with:
           srcclr-api-token: ${{ secrets.SRCCLR_API_TOKEN }}
 
-  veracode_sast:
+  # veracode_sast:
+  #   name: "Pipeline SAST Scan"
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - pre_commit
+  #   if: >
+  #     (github.ref_name == 'master' || startsWith(github.ref_name, 'release/') || github.event_name == 'pull_request') &&
+  #     github.actor != 'dependabot[bot]' &&
+  #     !contains(github.event.head_commit.message, '[skip build]')
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
+  #     - uses: Alfresco/alfresco-build-tools/.github/actions/github-download-file@v8.8.0
+  #       with:
+  #         token: ${{ secrets.BOT_GITHUB_TOKEN }}
+  #         repository: "Alfresco/veracode-baseline-archive"
+  #         file-path: "hxinsight-connector/hxinsight-connector-baseline.json"
+  #         target: "baseline.json"
+  #     - name: "Build application"
+  #       run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests
+  #     - name: "Run SAST Scan"
+  #       uses: veracode/Veracode-pipeline-scan-action@v1.0.17
+  #       with:
+  #         vid: ${{ secrets.VERACODE_API_ID }}
+  #         vkey: ${{ secrets.VERACODE_API_KEY }}
+  #         file: "distribution/target/alfresco-hxinsight-connector-distribution-*.zip"
+  #         fail_build: false
+  #         project_name: hxinsight-connector
+  #         issue_details: true
+  #         veracode_policy_name: Alfresco Default
+  #         summary_output: true
+  #         summary_output_file: results.json
+  #         summary_display: true
+  #         baseline_file: baseline.json
+  #     - name: "Clean Maven cache"
+  #       run: bash ./scripts/ci/cleanup_cache.sh
+
+  veracode_sast_2:
     name: "Pipeline SAST Scan"
     runs-on: ubuntu-latest
     needs:
@@ -76,32 +113,13 @@ jobs:
       github.actor != 'dependabot[bot]' &&
       !contains(github.event.head_commit.message, '[skip build]')
     steps:
-      - uses: actions/checkout@v4
-      - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/github-download-file@v8.8.0
-        with:
-          token: ${{ secrets.BOT_GITHUB_TOKEN }}
-          repository: "Alfresco/veracode-baseline-archive"
-          file-path: "hxinsight-connector/hxinsight-connector-baseline.json"
-          target: "baseline.json"
-      - name: "Build application"
-        run: mvn ${{ env.MAVEN_CLI_OPTS }} clean install -DskipTests
-      - name: "Run SAST Scan"
-        uses: veracode/Veracode-pipeline-scan-action@v1.0.17
-        with:
-          vid: ${{ secrets.VERACODE_API_ID }}
-          vkey: ${{ secrets.VERACODE_API_KEY }}
-          file: "distribution/target/alfresco-hxinsight-connector-distribution-*.zip"
-          fail_build: false
-          project_name: hxinsight-connector
-          issue_details: true
-          veracode_policy_name: Alfresco Default
-          summary_output: true
-          summary_output_file: results.json
-          summary_display: true
-          baseline_file: baseline.json
-      - name: "Clean Maven cache"
-        run: bash ./scripts/ci/cleanup_cache.sh
+    - uses: Alfresco/alfresco-build-tools/.github/actions/veracode@ref
+      continue-on-error: true
+      with:
+        srcclr-api-token: ${{ secrets.SRCCLR_API_TOKEN }}
+        srcclr-project-ext: 'Alfresco/hxinsight-connector' # optional, allows for directing scan results to Veracode project named: <default project name>/<srcclr-project-ext>
+
+    
 
   pmd_scan:
     name: "PMD Scan"
