--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,6 @@ on:
       - fix/**
       - master
       - release/**
-  schedule:
-    - cron: "0 0 * * *"  # Runs every night at midnight
-      branches:
-        - master
 
 env:
   # Both variables are required to be set before the release process starts .
@@ -61,11 +57,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.8.0
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/veracode@ref
+      - uses: Alfresco/alfresco-build-tools/.github/actions/veracode@v8.8.0
         continue-on-error: true
         with:
           srcclr-api-token: ${{ secrets.SRCCLR_API_TOKEN }}
-          srcclr-project-ext: 'Alfresco/hxinsight-connector'
 
   veracode_sast:
     name: "Pipeline SAST Scan"
@@ -104,20 +99,6 @@ jobs:
       - name: "Clean Maven cache"
         run: bash ./scripts/ci/cleanup_cache.sh
 
-    name: "Pipeline SAST Scan"
-    runs-on: ubuntu-latest
-    needs:
-      - pre_commit
-    if: >
-      (github.ref_name == 'master' || startsWith(github.ref_name, 'release/') || github.event_name == 'pull_request') &&
-      github.actor != 'dependabot[bot]' &&
-      !contains(github.event.head_commit.message, '[skip build]')
-    steps:
-    - uses: Alfresco/alfresco-build-tools/.github/actions/veracode@ref
-      continue-on-error: true
-      with:
-        srcclr-api-token: ${{ secrets.SRCCLR_API_TOKEN }}
-        srcclr-project-ext: 'Alfresco/hxinsight-connector' # optional, allows for directing scan results to Veracode project named: <default project name>/<srcclr-project-ext>
   pmd_scan:
     name: "PMD Scan"
     runs-on: ubuntu-latest
@@ -247,26 +228,6 @@ jobs:
         run: JAVA_VERSION=${{ env.JAVA_VERSION_SUPPORTED_BY_REPO }} && bash ./scripts/ci/buildDockerImages.sh
       - name: "Run e2e tests"
         run: mvn ${{ env.MAVEN_CLI_OPTS }} verify -pl 'hxinsight-extension,e2e-test' -am -DskipUnitTests -DskipIntegrationTests -Dalfresco-platform.version=${{ matrix.repoVersion }} -Dalfresco-platform.java.version=${{ env.JAVA_VERSION_SUPPORTED_BY_REPO }}
-
-  nightly_tests:
-    name: "Run nightly tests"
-    runs-on: ubuntu-latest
-    if: github.event_name == 'schedule'
-    steps:
-      - name: "Checkout repository"
-        uses: actions/checkout@v4
-      - name: "Set up JDK"
-        uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
-      - name: "Build application"
-        run: mvn clean install -DskipTests -pl live-ingester
-      - name: "Run OpenApi Specification tests"
-        run: mvn test -Dtest=OpenApiRequestValidationTest -pl live-ingester
-      - name: "Notify on failure"
-        if: failure()
-        uses: Alfresco/alfresco-build-tools/.github/actions/send-teams-notification@v8.8.0
-        with:
-          webhook-url: ${{ secrets.MS_TEAMS_WEBHOOK_URL }}
-          message: "Nightly tests failed"
 
   push_docker_images:
     name: "Push docker images"
