--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,10 +61,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.8.0
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/veracode@v8.8.0
+      - uses: Alfresco/alfresco-build-tools/.github/actions/veracode@ref
         continue-on-error: true
         with:
           srcclr-api-token: ${{ secrets.SRCCLR_API_TOKEN }}
+          srcclr-project-ext: 'Alfresco/hxinsight-connector'
 
   veracode_sast:
     name: "Pipeline SAST Scan"
@@ -252,7 +253,7 @@ jobs:
         with:
           webhook-url: ${{ secrets.MS_TEAMS_WEBHOOK_URL }}
           message: "Nightly tests failed"
-        
+      
   push_docker_images:
     name: "Push docker images"
     runs-on: ubuntu-latest
