--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: Alfresco/alfresco-build-tools/.github/actions/free-hosted-runner-disk-space@v8.8.0
       - uses: Alfresco/alfresco-build-tools/.github/actions/setup-java-build@v8.8.0
-      - uses: Alfresco/alfresco-build-tools/.github/actions/veracode@ref
+      - uses: Alfresco/alfresco-build-tools/.github/actions/veracode@v8.8.0
         continue-on-error: true
         with:
           srcclr-api-token: ${{ secrets.SRCCLR_API_TOKEN }}
