change create and update ingest events for createOrUpdate

--- a/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-document.yml
+++ b/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-document.yml
@@ -8,7 +8,7 @@ body: [
   {
     "objectId": "d71dd823-82c7-477c-8490-04cb0e826e65",
     "sourceId" : "alfresco-dummy-source-id-0a63de491876",
-    "eventType": "create",
+    "eventType": "createOrUpdate",
     "sourceTimestamp": 1611227656423,
     "properties": {
       "cm:autoVersion": {"value": true},
