--- a/live-ingester/src/integration-test/resources/rest/hxinsight/requests/update-document.yml
+++ b/live-ingester/src/integration-test/resources/rest/hxinsight/requests/update-document.yml
@@ -8,7 +8,7 @@ body: [
   {
     "objectId": "d71dd823-82c7-477c-8490-04cb0e826e65",
     "sourceId": "alfresco-dummy-source-id-0a63de491876",
-    "eventType": "update",
+    "eventType": "createOrUpdate",
     "sourceTimestamp": 1611656982995,
     "properties": {
       "cm:title": {
@@ -66,10 +66,6 @@ body: [
           }
         }
       }
-    },
-    "removedProperties": [
-      "cm:versionType",
-      "cm:description"
-    ]
+    }
   }
 ]
