update create and update ACS events

--- a/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-or-update-document.yml
+++ b/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-or-update-document.yml
@@ -34,6 +34,9 @@ body: [
         "value": 1611227655695,
         "annotation": "dateModified"
       },
+      "cm:versionType": {
+        "value": "MAJOR"
+      },
       "cm:versionLabel": {
         "value": "1.0"
       },
