Specify data types with non annotated properties

--- a/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-or-update-document.yml
+++ b/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-or-update-document.yml
@@ -12,6 +12,7 @@ body: [
     "sourceTimestamp": 1611656982995,
     "properties": {
       "cm:title": {
+        "type": "string",
         "value": "Purchase Order"
       },
       "aspectsNames": {
@@ -35,9 +36,11 @@ body: [
         "annotation": "dateModified"
       },
       "cm:versionType": {
+        "type": "string",
         "value": "MAJOR"
       },
       "cm:versionLabel": {
+        "type": "string",
         "value": "1.0"
       },
       "createdBy": {
@@ -45,6 +48,7 @@ body: [
         "annotation": "createdBy"
       },
       "ALLOW_ACCESS": {
+        "type": "string",
         "value": [
           "GROUP_EVERYONE"
         ]
@@ -56,9 +60,6 @@ body: [
       "type": {
         "value": "cm:content",
         "annotation": "type"
-      },
-      "DENY_ACCESS": {
-        "value": []
       },
       "cm:content": {
         "file": {
