--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <url>http://github.com/${project.scm.organization}/${project.scm.repository}</url>
         <connection>scm:git:https://github.com/${project.scm.organization}/${project.scm.repository}.git</connection>
         <developerConnection>scm:git:https://github.com/${project.scm.organization}/${project.scm.repository}.git</developerConnection>
-        <tag>1.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
     <issueManagement>
         <system>Jira</system>
